[project]
name = "project-saas"
version = "0.1.0"
description = ""
authors = [
    {name = "Hugo Rodrigues Dias", email = "rodrigueshugodias@gmail.com"}
]
package-mode = false
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "flask (>=3.1.2,<4.0.0)"
]

[tool.poetry]
name = "project-saas"
version = "0.1.0"
description = ""
authors = ["Hugo Rodrigues Dias <rodrigueshugodias@gmail.com>"]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=9.0.2,<10.0.0)"
]