[project]
name = "project-saas"
version = "0.1.0"
description = ""
authors = [
    {name = "Hugo Rodrigues Dias", email = "rodrigueshugodias@gmail.com"}
]

readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "flask (>=3.1.2,<4.0.0)",
    "gunicorn (>=24.1.1,<25.0.0)",
    "flask-sqlalchemy (>=3.1.1,<4.0.0)",
    "flask-migrate (>=4.1.0,<5.0.0)",
    "alembic (>=1.18.3,<2.0.0)",
    "psycopg[binary] (>=3.3.2,<4.0.0)",
    "psycopg2-binary (>=2.9.11,<3.0.0)"
]

[tool.poetry]
name = "project-saas"
version = "0.1.0"
description = ""
authors = ["Hugo Rodrigues Dias <rodrigueshugodias@gmail.com>"]
package-mode = false
[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=9.0.2,<10.0.0)"
]